load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")
load("//dev:eslint.bzl", "eslint_config")
load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")

npm_link_all_packages(name = "node_modules")

eslint_config()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
        "//client/cody-shared:tsconfig",
        "//client/common:tsconfig",
    ],
)

ts_project(
    name = "cody-slack",
    srcs = [
        "src/app.ts",
        "src/constants.ts",
        "src/mention-handler.ts",
        "src/services/codebase-context.ts",
        "src/services/github-client.ts",
        "src/services/local-vector-store.ts",
        "src/services/openai-completions-client.ts",
        "src/services/sourcegraph-client.ts",
        "src/services/stream-completions.ts",
        "src/slack/helpers.ts",
        "src/slack/init.ts",
        "src/slack/message-interaction.ts",
        "src/slack/preamble.ts",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@slack/bolt",
        ":node_modules/@slack/web-api",
        ":node_modules/@sourcegraph/cody-shared",
        ":node_modules/langchain",
        ":node_modules/openai",
        ":node_modules/slackify-markdown",
        "//:node_modules/@types/lodash",
        "//:node_modules/envalid",
        "//:node_modules/lodash",
        "//:node_modules/octokit",
    ],
)

copy_to_bin(
    name = "package_json_prod",
    srcs = ["package/package.json"],
    visibility = ["//visibility:public"],
)

esbuild(
    name = "bundle",
    entry_point = "src/app.ts",
    external = [
        "jsonc-parser",  # UMD module
        "hnswlib-node",
    ],
    format = "cjs",
    output = "app.js",
    platform = "node",
    sourcemap = "linked",
    target = "node16",
    deps = [":cody-slack"],
)
