load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "npm_package", "ts_project")
load("//dev:eslint.bzl", "eslint_config_and_lint_root")

# gazelle:js_ignore_imports **/*.css

npm_link_all_packages(name = "node_modules")

eslint_config_and_lint_root()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//:tsconfig",
        "//client/cody-shared:tsconfig",
        "//client/common:tsconfig",
    ],
)

filegroup(
    name = "cody-ui_styles",
    srcs = glob(["**/*.css"]),
)

ts_project(
    name = "cody-ui_lib",
    srcs = [
        "src/Chat.tsx",
        "src/chat/BlinkingCursor.tsx",
        "src/chat/CodeBlocks.tsx",
        "src/chat/ContextFiles.tsx",
        "src/chat/Transcript.story.tsx",
        "src/chat/Transcript.tsx",
        "src/chat/TranscriptItem.tsx",
        "src/chat/actions/TranscriptAction.tsx",
        "src/chat/fixtures.ts",
        "src/chat/inputContext/ChatInputContext.story.tsx",
        "src/chat/inputContext/ChatInputContext.tsx",
        "src/globals.d.ts",
        "src/icons/AskCodyIcon.tsx",
        "src/icons/CodyLogo.tsx",
        "src/index.ts",
        "src/terms.ts",
        "src/utils/Icon.tsx",
        "src/utils/icons.tsx",
    ],
    data = [
        ":cody-ui_styles",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@sourcegraph/cody-shared",
        ":node_modules/@sourcegraph/common",
        "//:node_modules/@mdi/js",
        "//:node_modules/@storybook/react",
        "//:node_modules/@types/classnames",
        "//:node_modules/@types/react",
        "//:node_modules/classnames",
        "//:node_modules/react",
    ],
)

npm_package(
    name = "cody-ui_pkg",
    srcs = [
        "package.json",
        ":cody-ui_lib",
    ],
)
